@@ -31,11 +31,11 @@ class LoadInitialData implements InitializingBean {
         log.info("Loading initial data...");
         List<User> users = TestFixtures.createUsers(userService);
         List<Task> tasks = TestFixtures.createTasks(taskService);
-        Task task1 = tasks.getFirst();
-        task1.setAssigneeId(users.getFirst().getId());
+        Task task1 = tasks.get(0);
+        task1.setAssigneeId(users.get(0).getId());
         taskService.upsert(task1);
-        Task task2 = tasks.getLast();
-        task2.setAssigneeId(users.getLast().getId());
+        Task task2 = tasks.get(tasks.size() - 1);
+        task2.setAssigneeId(users.get(tasks.size() - 1).getId());
         taskService.upsert(task2);
     }
 }
